[metadata]
name = schrl
version = 0.0.1
author = Gandalf
author_email = harry.potter@hogwarts.edu
description = Constrained Hierarchical Deep Reinforcement Learning with Differentiable Formal Specifications
long_description = file: README.md
long_description_content_type = text/markdown
url = https://sites.google.com/view/schrl/home
project_urls =
    Github = https://github.com/a-n-onymous/schrl
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.9

[options.packages.find]
where=src
exclude =
    data*